# carltographer

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PLAN-rust-visibility-optimizations.md  README.md  visibility_perf_analysis.md
.claude/: settings.json
v1/: .gitignore  (+3 more)
v2/: .engine_parity_manifest.json  CODE_REVIEW_NOTES.md  PLAN-obscuring-height.md  PLAN.md  TERRAIN_CUSTOMIZATION_ROADMAP.md  pyproject.toml  requirements-dev.txt  requirements.txt
v2/catalogs/builtin/: gw_misc.json  polygon_terrain.json  wtc_set.json
v2/catalogs/test/: multi_type.json  polygon_mixed.json  polygon_only.json  polygon_tank_only.json  quantity_limited.json  standard.json  walls_dual.json  walls_tall_only.json
v2/docs/: github-actions-packaging.md
v2/engine/: OPTIMIZATION_NOTES.md  __init__.py  catalog_io.py  collision.py  collision_distance_test.py  collision_test.py  generate.py  generate_test.py  mutation.py  mutation_test.py  prng.py  tempering.py  tempering_test.py  types.py  visibility.py  visibility_test.py
v2/engine_cmp/: __init__.py  compare.py  compare_test.py  hash_manifest.py
v2/engine_rs/: .optimization_status  Cargo.toml  OPTIMIZATION_LOOP.md  OPTIMIZATION_NOTES.md  pyproject.toml
v2/engine_rs/benches/: generate_bench.rs  generate_fixtures.py
v2/engine_rs/src/: collision.rs  generate.rs  lib.rs  mutation.rs  prng.rs  tempering.rs  types.rs  visibility.rs
v2/frontend/: app.py  app_test.py  catalogs.py  layout_io.py  layout_io_test.py  missions.py  missions_test.py  tts_save.py
v2/packaging/: entry_point.py
v2/schemas/: carltographer.schema.json  design_notes.md
v2/scripts/: README.md  bench_python_visibility.py  build-rust-engine.sh  build_rust_engine.py  coverage.py  coverage_cmp.py  coverage_py.py  coverage_rs.py  example_base_params.json  example_search_space.json  package-linux.sh  package_executable.py  profile_engine.py  run-coverage.sh  run-ui.sh  tune_hyperparams.py  tune_hyperparams_multi.py  tuning_scenarios.py  ui.py
(+67 files in other folders)
