[project]
name = "carltographer"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
line-length = 79
exclude = [".env", ".git", "__pycache__", "*.egg-info"]

[tool.isort]
line_length = 79
profile = "black"
skip = [".env"]
known_first_party = ["v2"]

[tool.pytest.ini_options]
testpaths = ["engine", "frontend"]
python_files = ["*_test.py"]
