[project]
name = "carltographer"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
line-length = 79
exclude = [".env", ".git", "__pycache__", "*.egg-info"]

[tool.isort]
line_length = 79
profile = "black"
skip = [".env"]
known_first_party = ["v2"]

[tool.pytest.ini_options]
testpaths = ["engine", "frontend"]
python_files = ["*_test.py"]

[tool.coverage.run]
source = ["engine", "frontend"]
omit = ["*_test.py", "engine_cmp/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.coverage.html]
directory = "htmlcov"
