[package]
name = "engine_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "engine_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "generate_bench"
harness = false

[lints.rust]
warnings = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }

[profile.release]
lto = true
codegen-units = 1
strip = true
